<resources>
    <string name="app_name">CleanArchitecture</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="note_saved">Done!</string>
    <string name="error_note_saved">Something went wrong!</string>
    <string name="last_update">Last updated</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_message">Do you really want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word">Word:</string>
</resources>