<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.marand.cleanarchitecture.presentation.main.noteslist.ListFragment"
        android:label="fragment_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_noteFragment"
            app:destination="@id/noteFragment" />
    </fragment>
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.marand.cleanarchitecture.presentation.main.note.NoteFragment"
        android:label="fragment_note"
        tools:layout="@layout/fragment_note" >
        <argument
            android:name="noteId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
</navigation>